<resources>
    <string name="app_name">FieldGame</string>
    <string name="button_qr_scanner">Start QR scanner</string>
    <string name="label_login">Zaloguj się</string>
    <string name="field_username">Nazwa użytkownika</string>
    <string name="field_password">Hasło</string>
    <string name="button_register">Zarejestruj się</string>
    <string name="title_qr_scanner">Zeskanuj kod QR</string>
    <string name="title_login">Logowanie</string>
    <string name="label_please_wait">Proszę czekać...</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_label_image">Wykryj Obiekt</string>
    <string name="label_no_account">Nie posiadasz konta?</string>
    <string name="title_registration">Rejestracja</string>
    <string name="label_riddle_count">Liczba zagadek: </string> <!-- spacja na końcu ważna! -->
    <string name="dialog_title_error">Błąd</string>
    <string name="dialog_body_unexpected_error_occured">Wystąpił nieoczekiwany błąd</string>
    <string name="button_ok">OK</string>
    <string name="alert_joining_game">Dołączanie do gry...</string>
    <string name="button_maps_to_labeler">Zrob zdjecie</string>
</resources>
